syntax = "proto3";

package proto;

// OverlaydCommand represents a command for i3x3, mirroring the properties relevant for
// i3x3overlayd, the command is used to move around the grid overlay appropriately.
message OverlaydCommand {
    uint32 target = 1;
}

// OverlaydCommandResponse represents the result of a command for i3x3overlayd.
message OverlaydCommandResponse {
    bool success = 1;
}

// OverlaydServer is a service for handling overlay commands.
service OverlaydServer {
    rpc SendCommand(OverlaydCommand) returns (OverlaydCommandResponse);
}
